Modifique el index

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> hola me encanta tu proyecto =P
 	<head>
 		<meta charset="utf-8">
 		<title>Sitio random</title>
